--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.2",
