fix URI redirection

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL='https://task-tracker-api.fly.dev/'
+REACT_APP_BASE_URL='https://task-tracker-api.fly.dev'
+REACT_APP_REDIRECT_URL='https://todo-list-app-manager.fly.dev'
